// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SessionCalendar/SessionCalendarDateCell component renders fine 1`] = `
<div
  className="test-an-sc-action"
>
  <div
    className="test-an-sc-action__control"
  >
    <button
      className="test-an-sc-action-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="icon icon-chevron-left"
      />
    </button>
    <div
      className="test-an-sc-action-date"
    >
      Jan 2019
    </div>
    <button
      className="test-an-sc-action-btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="icon icon-chevron-right"
      />
    </button>
  </div>
  <div
    className="test-an-sc-action-customize"
  >
    <div
      className="test-customize-action"
    >
      message...
    </div>
  </div>
</div>
`;

exports[`components/SessionCalendar/SessionCalendarDateCell component renders fine if prev/next button is disabled 1`] = `
<div
  className="test-an-sc-action"
>
  <div
    className="test-an-sc-action__control"
  >
    <button
      className="test-an-sc-action-btn test-an-sc-action-btn__disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <i
        className="icon icon-chevron-left"
      />
    </button>
    <div
      className="test-an-sc-action-date"
    >
      Jan 2019
    </div>
    <button
      className="test-an-sc-action-btn test-an-sc-action-btn__disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <i
        className="icon icon-chevron-right"
      />
    </button>
  </div>
</div>
`;
